--- a/overlays/org.apereo.cas.cas-server-webapp-tomcat-5.3.14/WEB-INF/classes/application.properties
+++ b/overlays/org.apereo.cas.cas-server-webapp-tomcat-5.3.14/WEB-INF/classes/application.properties
@@ -113,7 +113,7 @@ spring.aop.proxy-target-class=true
 ##
 # Rest≈‰÷√
 #
-cas.authn.rest.uri=http://localhost:8080/login
+#cas.authn.rest.uri=http://localhost:8080/login
 
 # ≈‰÷√ ˝æ›ø‚
 cas.authn.jdbc.query[0].url=jdbc:mysql://localhost:3306/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
