--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
                 <dependency>
                     <groupId>net.shibboleth.tool</groupId>
                     <artifactId>xmlsectool</artifactId>
-                    <version>2.0.0-beta-2</version>
+                    <version>2.0.0</version>
                 </dependency>
                 <!--数据库认证相关 end-->
                 <!-- restful -->
