--- a/overlays/org.apereo.cas.cas-server-webapp-tomcat-5.3.14/WEB-INF/classes/application.properties
+++ b/overlays/org.apereo.cas.cas-server-webapp-tomcat-5.3.14/WEB-INF/classes/application.properties
@@ -116,9 +116,9 @@ spring.aop.proxy-target-class=true
 #cas.authn.rest.uri=http://localhost:8080/login
 
 # ≈‰÷√ ˝æ›ø‚
-cas.authn.jdbc.query[0].url=jdbc:mysql://localhost:3306/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-cas.authn.jdbc.query[0].user=cas
-cas.authn.jdbc.query[0].password=123456
+cas.authn.jdbc.query[0].url=jdbc:mysql://rm-bp1831d266xz00u45oo.mysql.rds.aliyuncs.com:3306/sso_cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+cas.authn.jdbc.query[0].user=cetc
+cas.authn.jdbc.query[0].password=cetc@123
 cas.authn.jdbc.query[0].sql=select * from user_info  where username=?
 cas.authn.jdbc.query[0].fieldPassword=password
 cas.authn.jdbc.query[0].driverClass=com.mysql.jdbc.Driver
