--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,8 @@
                 <dependency>
                     <groupId>mysql</groupId>
                     <artifactId>mysql-connector-java</artifactId>
-                    <version>5.1.46</version>
+                    <version>8.0.18</version>
+                    <!-- <version>5.1.46</version> -->
                 </dependency>
                 <dependency>
                     <groupId>net.shibboleth.tool</groupId>
