新增单点登出功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -130,3 +130,13 @@ cas.serviceRegistry.initFromJson=true
 cas.authn.jdbc.query[0].passwordEncoder.type=DEFAULT
 cas.authn.jdbc.query[0].passwordEncoder.characterEncoding=UTF-8
 cas.authn.jdbc.query[0].passwordEncoder.encodingAlgorithm=MD5
+
+#单点登出配置
+#配置允许登出后跳转到指定页面
+cas.logout.followServiceRedirects=true
+#跳转到指定页面需要的参数名为 service
+cas.logout.redirectParameter=service
+#在退出时是否需要 确认一下  true确认 false直接退出
+cas.logout.confirmLogout=false
+#是否移除子系统的票据
+cas.logout.removeDescendantTickets=true
