新增单点登出功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -140,3 +140,7 @@ cas.logout.redirectParameter=service
 cas.logout.confirmLogout=false
 #是否移除子系统的票据
 cas.logout.removeDescendantTickets=true
+
+#记住我 （3600：1小时， 默认为2小时）
+#cas.ticket.tgt.rememberMe.enabled=true
+#cas.ticket.tgt.rememberMe.timeToKillInSeconds=3600
