新增TGT有效时间配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -143,4 +143,8 @@ cas.logout.removeDescendantTickets=true
 
 #记住我 （3600：1小时， 默认为2小时）
 #cas.ticket.tgt.rememberMe.enabled=true
-#cas.ticket.tgt.rememberMe.timeToKillInSeconds=3600
+#=60cas.ticket.tgt.rememberMe.timeToKillInSeconds
+
+# TGT策略 （12小时有效）
+cas.ticket.tgt.timeToKillInSeconds=43200
+cas.ticket.tgt.maxTimeToLiveInSeconds=43200
